[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "X Bot that prevents spam bots from interacting with account."
license = "GPL-3"
repository = "https://github.com/software-engineering-on-x/x-bot-prevention"
rust-version = "1.77"

[dependencies]
config = "0.14.0"
tracing = { version = "0.1", features = ["log"] }
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
